--- a/project/build.properties
+++ b/project/build.properties
@@ -2,8 +2,8 @@
 #Sun Jan 24 13:59:22 EST 2010
 project.organization=org.scala-tools.sbinary
 project.name=SBinary Parent
-sbt.version=0.7.3
+sbt.version=0.7.4
 project.version=0.3.1-SNAPSHOT
 def.scala.version=2.7.7
-build.scala.versions=2.7.7 2.8.0.Beta1
+build.scala.versions=2.7.7 2.8.0
 project.initialize=false
