--- a/project/build.properties
+++ b/project/build.properties
@@ -2,8 +2,8 @@
 #Sun Jan 24 13:59:22 EST 2010
 project.organization=org.scala-tools.sbinary
 project.name=SBinary Parent
-sbt.version=0.7.4
+sbt.version=0.7.5
 project.version=0.3.1-SNAPSHOT
 def.scala.version=2.7.7
-build.scala.versions=2.8.0
+build.scala.versions=2.8.1 2.9.0.RC1
 project.initialize=false
